--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,8 +49,9 @@ dependencies {
     implementation project(':rxeasyhttp')
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation project(':jiaozivideoplayer')
-    implementation 'tv.danmaku.ijk.media:ijkplayer-java:0.8.4'
-    implementation 'tv.danmaku.ijk.media:ijkplayer-armv7a:0.8.4'
+//    implementation 'tv.danmaku.ijk.media:ijkplayer-java:0.8.4'
+//    implementation 'tv.danmaku.ijk.media:ijkplayer-armv7a:0.8.4'
+//    implementation 'tv.danmaku.ijk.media:ijkplayer-x86:0.8.4'
     implementation 'com.danikula:videocache:2.7.0'
     implementation 'com.google.android.exoplayer:exoplayer:2.7.1'
 //    implementation 'tv.danmaku.ijk.media:ijkplayer-java:0.8.4'
