--- a/build.gradle
+++ b/build.gradle
@@ -3,11 +3,13 @@
 buildscript {
     repositories {
         jcenter()
+        mavenCentral()
+        google()
         maven {
             url 'https://maven.google.com/'
             name 'Google'
         }
-        google()
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.4'
@@ -21,6 +23,7 @@ allprojects {
     repositories {
         jcenter()
         mavenCentral()
+        google()
         maven { url "https://jitpack.io" }
         maven {
             url 'https://maven.google.com/'
